--- a/templates/patient_file.html
+++ b/templates/patient_file.html
@@ -21,7 +21,7 @@
     {% for patient in patient_info %}
         <tr>
         <td>{{ patient['id'] }}</td>
-        <td>{{ patient['patient_name'] }}</td>
+        <td>{{ patient['name'] }}</td>
         <td>{{ patient['gender'] }}</td>
         <td>{{ patient['birth_year'] }}</td>
         <td>{{ patient['adress'] }}</td>
