make flask session work

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <h1>{% block title %}
         landing page
     {% endblock %}</h1>
-    <a href="#"><button>log in </button></a>
+    <a href="/login"><button>log in </button></a>
     <a href="/add_new_doctor"><button>register</button></a>
     <a href="/admin_panil"><button>admin panil (fol divilopment purbos) </button></a>
     
