--- a/templates/admin_panil.html
+++ b/templates/admin_panil.html
@@ -3,6 +3,9 @@
 {% block title %} admin panel {% endblock %}
 
 {% block body %}
+{% if current_user.is_authenticated %}
+Hi {{ current_user.name }}!
+{% endif %}
     {{existing_patient_names}}
     <a href="/add_new_patient"><button>add new patient</button></a>
     <form action="/patient_file" method="post">
