--- a/templates/add_new_doctor.html
+++ b/templates/add_new_doctor.html
@@ -4,23 +4,26 @@
 
 {% block body %}
 
-    <form action="/added_doctor" method="post">
-        <label for="name">name</label>
-        <input type="text" name="name">
+    <form method="post">
 
-        <label for="gender">gender</label>
-        <input type="text" name="gender">
+        {{form.hidden_tag()}}
 
-        <label for="speciality">speciality</label>
-        <input type="text" name="speciality">
+        {{form.name.label}}
+        {{form.name}}
 
-        <label for="email">email</label>
-        <input type="email" name="email">
+        {{form.email.label}}
+        {{form.email}}
 
-        <label for="doctor_password">password</label>
-        <input type="text" name="doctor_password">
+        {{form.gender.label}}
+        {{form.gender}}
 
-        <input type="submit" value="sibmit">
-    </form>
+        {{form.speciality.label}}
+        {{form.speciality}}
+
+        {{form.password.label}}
+        {{form.password}}
+
+        {{form.submit}}
+        
 
 {% endblock %}
