--- a/templates/add_new_patient.html
+++ b/templates/add_new_patient.html
@@ -3,30 +3,28 @@
 {% block body %}
 
     <h1>{% block title%}add new patient {% endblock %}</h1>
-    <form action="/added_patient" method="post">
-        
-        <label for="patient_name">Patient name</label>
-        <input type="text" placeholder="patient name" name="patient_name">
+    <form  method="post">
+        {{form.hidden_tag()}}
 
-        <label for="gender">Gender</label>
-        <select name="gender" id="gender">
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-        </select>
-        
-        <label for="birth_year">Birth year</label>
-        <input type="number" name="birth_year" maxlength="4" minlength="4">
+        {{form.name.label}}
+        {{form.name}}
 
-        <label for="adress">Adress</label>
-        <input type="text" name="adress">
+        {{form.email.label}}
+        {{form.email}}
 
-        <label for="phone_number">Phone number</label>
-        <input type="number" name="phone_number" maxlength="11" minlength="11">
+        {{form.gender.label}}
+        {{form.gender}}
 
-        <label for="emali">E-mail</label>
-        <input type="email" name="email">
+        {{form.phone_number.label}}
+        {{form.phone_number}}
 
-        <input type="submit" value="submit">
-    </form>
+        {{form.adress.label}}
+        {{form.adress}} 
+
+        {{form.birth_year.label}}
+        {{form.birth_year}}
+
+        {{form.submit}}
+       
 
 {% endblock %}
