--- a/templates/add_new_doctor.html
+++ b/templates/add_new_doctor.html
@@ -8,22 +8,22 @@
 
         {{form.hidden_tag()}}
 
-        {{form.name.label}}
-        {{form.name}}
+        {{form.name.label(class="form-label")}}
+        {{form.name(class="form-control", id="exampleInputEmail1")}}
 
-        {{form.email.label}}
-        {{form.email}}
+        {{form.email.label(class="form-label")}}
+        {{form.email(class="form-control", id="exampleInputEmail1")}}
 
-        {{form.gender.label}}
-        {{form.gender}}
+        {{form.gender.label(class="form-label")}}
+        {{form.gender(class="form-control", id="exampleInputEmail1")}}
 
-        {{form.speciality.label}}
-        {{form.speciality}}
+        {{form.speciality.label(class="form-label")}}
+        {{form.speciality(class="form-control", id="exampleInputEmail1")}}
 
-        {{form.password.label}}
-        {{form.password}}
+        {{form.password.label(class="form-label")}}
+        {{form.password(class="form-control", id="exampleInputEmail1")}}
 
-        {{form.submit}}
+        {{form.submit(class="form-control", id="exampleInputEmail1")}}
         
 
 {% endblock %}
