--- a/templates/admin_panil.html
+++ b/templates/admin_panil.html
@@ -21,5 +21,9 @@ Hi {{ current_user.name }}! <a href="/logout">logout</a>
         <button type="submit" value="submit">go to patient file</button>
     </form>
     {{patients}}
+    <section>
+        <h1>financial </h1>
+        {{total_revnue}}
+    </section>
 
 {% endblock %}
