added total revenue to the finance section

--- a/templates/admin_panil.html
+++ b/templates/admin_panil.html
@@ -23,7 +23,9 @@ Hi {{ current_user.name }}! <a href="/logout">logout</a>
     {{patients}}
     <section>
         <h1>financial </h1>
+        total revenue =  
         {{total_revnue}}
+        
     </section>
 
 {% endblock %}
