--- a/templates/add_new_patient.html
+++ b/templates/add_new_patient.html
@@ -24,6 +24,10 @@
         {{form.birth_year.label(class="form-label")}}
         {{form.birth_year(class="form-control", id="exampleInputEmail1")}}
 
+        {{form.medical_history.label(class="form-label")}}
+        {{form.medical_history(class="form-control", id="exampleInputEmail1")}}
+
+
         {{form.submit}}
        
 
