--- a/templates/diagnosis.html
+++ b/templates/diagnosis.html
@@ -2,36 +2,51 @@
 
 {% block body %}
 {{patient_name}}
-    &nbsp; &nbsp;
+    (image for UL1)
     <form name="diagnosis_form" method="post">
         <input type="hidden" name="tooth" value="UL1">
         <input type="hidden" name="patient_name" value="{{patient_name}}">
         missed 
-        <input type="radio" name="missed" id="" value=False checked>exist
-        <input type="radio" name="missed" id="" value=True>missed
-        
-        <br>
-
-        filled
-        <input type="radio" name="filled" id="" value=False checked>non-filled
-        <input type="radio" name="filled" id="" value=True>filled
-
-        <br>
-        decaied
-        <input type="radio" name="decaied" id="" value=False checked>sound
-        <input type="radio" name="decaied" id="" value=True >decaied
-
-        <br>
-
-        rooth canal teated
-        <input type="radio" name="rct" id="" value=False checked>no
-        <input type="radio" name="rct" id="" value=True>root canal treated
-        
-        <br>
-
-        
+        <input type="radio" name="tooth_condition" id="" value='exist' checked>exist
+        <input type="radio" name="tooth_condition" id="" value='missed'>missed
+        <input type="radio" name="tooth_condition" id="" value='filled'>filled
+        <input type="radio" name="tooth_condition" id="" value='decaied'>decaied
+        <input type="radio" name="tooth_condition" id="" value='rct'>root canal treated
+        <input type="radio" name="tooth_condition" id="" value='implant'>implant
+        <input type="radio" name="tooth_condition" id="" value='crown'>crown
         <input type="submit" value="submit">
     </form>    
 
+    <br>
+    (image for UL2)
+    <form name="diagnosis_form2" method="post">
+        <input type="hidden" name="subject" value="UL2">
+        <input type="hidden" name="patient_name" value="{{patient_name}}">
+        missed 
+        <input type="radio" name="diagnosis" id="" value='exist' checked>exist
+        <input type="radio" name="diagnosis" id="" value='missed'>missed
+        <input type="radio" name="diagnosis" id="" value='filled'>filled
+        <input type="radio" name="diagnosis" id="" value='decaied'>decaied
+        <input type="radio" name="diagnosis" id="" value='rct'>root canal treated
+        <input type="radio" name="diagnosis" id="" value='implant'>implant
+        <input type="radio" name="diagnosis" id="" value='crown'>crown
+        <input type="submit" value="submit">
+    </form>  
+
+    TODO the rest of the teeth
+    <br>
+
+    <form  method="post">
+        <input type="hidden" name="patient_name" value="{{patient_name}}">
+        <label for="subject">diagnosis for:</label>
+        <input type="text" name="subject" placeholder="EX: soft tissue">
+        <br>
+        <label for="diagnosis"> diagnisis</label>
+        <input type="text" name="diagnosis" placeholder="EX: periodontitis">
+        <br>
+        <input type="submit" value="submit">
+
+
+    </form>
 
 {% endblock %}
