--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,79 @@
-{% extends 'layout.html' %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <title>landing page</title>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+<body>
+    <nav class="index_nav" >
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="/static/dental_manager_logo-removebg-preview.png" alt="" width="300" height=auto>
+          </a>
+        </div>
+    </nav>
 
 
+    <section class="index_sec" >
+        <div class="index_sec1_div1">
+            
+            <h1 class="index_sec1_div1_h1">your success starts with a system!!</h3>
+            <br>
+            <br>
+            <h4 class="index_sec1_div1_h4">manage your patient files, clinic financials, communicate with the reciption in the easiest possible way and more!</h4>
+            <br>
+            <div class="index_sec1_div1_buttons">
+                <a href="/login"><button class="btn btn-outline-primary" id="btnn">log in </button></a>
+                <a href="/add_new_doctor"><button class="btn btn-outline-primary">register</button></a>
+                
+            </div>
+        </div>
 
-{% block body %}
-    <h1>{% block title %}
-        landing page
-    {% endblock %}</h1>
-    <a href="/login"><button>log in </button></a>
-    <a href="/add_new_doctor"><button>register</button></a>
-    <a href="/admin_panil"><button>admin panil (fol divilopment purbos) </button></a>
+        <div class="index_sec1_div2">
+            <img src="/static/flat-dental-care-concept-illustration_23-2149002069.png" alt="mouthe" class="index_sec1_div2_img">
+        </div>
+        
+
+    </section>
+
+
+    <section class="index_sec" id="index_sec2">
+        <div class="index_sec2_1">
+            features
+        </div>
+
+        <div class="index_sec2_2">
+            <div class="index_feature_box">
+                <img src="/static/dental_report_icon_final-svg.png" alt="" class="index_feature_box_img">
+                <div class="index_feature_box_text">patient managment</div>
+            </div>
+
+
+            <div class="index_feature_box">
+                <img src="/static/financial_icon_final-svg.png" alt="" class="index_feature_box_img">
+                <div class="index_feature_box_text">financials</div>
+            </div>
+
+
+            <div class="index_feature_box">
+                <img src="/static/analysis_icon_final-svg.png" alt="" class="index_feature_box_img">
+                <div class="index_feature_box_text">analysis</div>
+            </div>
+
+
+            <div class="index_feature_box">
+                <img src="/static/3root_molar_icon_final.png" alt="" class="index_feature_box_img">
+                <div class="index_feature_box_text">interactive chart</div>
+            </div>
+        </div>
+    </section>
+   
     
-{% endblock %}
+</body>
+</html>
+
+
