--- a/templates/admin_panil.html
+++ b/templates/admin_panil.html
@@ -15,8 +15,17 @@
     </style>
 </head>
 <body>
-    <nav class="index_nav">
-        <a href="/add_new_patient"><button class="btn btn-outline-primary">add new patient</button></a>
+    <nav class="index_nav" >
+        <div >
+          <a class="navbar-brand" href="#">
+            <img src="/static/dental_manager_logo-removebg-preview.png" alt="" width="300" height=auto>
+          </a>
+        </div>
+        <div>
+            <img src="/static/facebook.png" alt="" width="50" height="auto">
+            <img src="/static/instagram.png" alt="" width="50" height="auto">
+            <img src="/static/twitter.png" alt="" width="50" height="auto">
+        </div>
     </nav>
     <section class="test_sec" id="test">aaaaaaaaaaaaaaaaa</section>
     <section class="admin_panil_sec1">
