--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,15 @@
 </head>
 <body>
     <nav class="index_nav" >
-        <div class="container">
+        <div >
           <a class="navbar-brand" href="#">
             <img src="/static/dental_manager_logo-removebg-preview.png" alt="" width="300" height=auto>
           </a>
+        </div>
+        <div>
+            <img src="/static/facebook.png" alt="" width="50" height="auto">
+            <img src="/static/instagram.png" alt="" width="50" height="auto">
+            <img src="/static/twitter.png" alt="" width="50" height="auto">
         </div>
     </nav>
 
@@ -71,8 +76,52 @@
             </div>
         </div>
     </section>
+
+    <div class="" id="index_sec3">
+        <div class="index_sec3_1">
+            contact us
+        </div>
+        <div class="index_sec3_1">
+            <div class="index_form_text">
+                <h1 class="index_form_text_h1">Help us improve for you. </h1>
+                <h3>We strive to provide you with the best service. Send us feedback and suggestions to improve the website</h3>
+                <div></div>
+            </div>
+            <div class="index_form">
+                <form method="post" class="">
+                    <label for="name" class="index_form_label">name</label>
+                    <input type="text" name="name" class="index_form_element">
+
+                    <label for="email" class="index_form_label">email</label>
+                    <input type="email" name="email" class="index_form_element">
+
+                    <label for="phone_number" class="index_form_label">phone number</label>
+                    <input type="number" name="phone_number" class="index_form_element">
+
+                    <label for="message" class="index_form_label">message</label>
+                    <textarea  name="message" class="index_form_element"></textarea>
+                    
+                    
+                    
+
+                    <input type="submit" name="submit" value="send" class="submit_button">
+                </form>
+                
+            </div>
+            
+        </div>
+    </div>
    
-    
+    <footer>
+        <div>
+            <img src="/static/dental_manager_logo-removebg-preview.png" alt="">
+        </div>
+        <div>
+            <img src="/static/facebook.png" alt="" width="50" height="auto">
+            <img src="/static/instagram.png" alt="" width="50" height="auto">
+            <img src="/static/twitter.png" alt="" width="50" height="auto">
+        </div>
+    </footer>
 </body>
 </html>
 
