--- a/templates/add_new_doctor.html
+++ b/templates/add_new_doctor.html
@@ -14,11 +14,11 @@
         {{form.email.label(class="form-label")}}
         {{form.email(class="form-control", id="exampleInputEmail1")}}
 
-        {{form.gender.label(class="form-label")}}
-        {{form.gender(class="form-control", id="exampleInputEmail1")}}
+        {{form.clinic_name.label(class="form-label")}}
+        {{form.clinic_name(class="form-control", id="exampleInputEmail1")}}
 
-        {{form.speciality.label(class="form-label")}}
-        {{form.speciality(class="form-control", id="exampleInputEmail1")}}
+        {{form.clinic_num.label(class="form-label")}}
+        {{form.clinic_num(class="form-control", id="exampleInputEmail1")}}
 
         {{form.password.label(class="form-label")}}
         {{form.password(class="form-control", id="exampleInputEmail1")}}
