--- a/templates/admin_panil.html
+++ b/templates/admin_panil.html
@@ -27,7 +27,8 @@
             <img src="/static/twitter.png" alt="" width="50" height="auto">
         </div>
     </nav>
-    <section class="test_sec" id="test">aaaaaaaaaaaaaaaaa</section>
+    
+<a href="/add_new_patient">add new patient</a>
     <section class="admin_panil_sec1">
 
         <form action="/patient_file" method="post">
@@ -106,6 +107,16 @@
             {% endfor %}
           </table>
     </section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+    const myModal = document.getElementById('myModal')
+const myInput = document.getElementById('myInput')
+
+myModal.addEventListener('shown.bs.modal', () => {
+  myInput.focus()
+})
+</script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
 </html>
 
