--- a/templates/patient_file.html
+++ b/templates/patient_file.html
@@ -124,6 +124,30 @@ operator id is:{{operator_id}}
 
         <input type="submit" value="sibmit">
     </form>
+
+    <form  action="/added_procedure" method="post">
+        {{procedure_form.hidden_tag()}}
+
+        {{procedure_form.operator_name.label}}
+        {{procedure_form.operator_name}}
+
+        {{procedure_form.procedure_type.label}}
+        {{procedure_form.procedure_type}}
+
+        {{procedure_form.tooth.label}}
+        {{procedure_form.tooth}}
+
+        {{procedure_form.price.label}}
+        {{procedure_form.price}}
+
+        {{procedure_form.description.label}}
+        {{procedure_form.description}}
+
+        {{procedure_form.patient_name}}
+
+        {{procedure_form.submit}}
+
+    </form>
 {{selected_patient_name}}
     
 </section>
